Poll links and qr-code are updarted

--- a/lecture-1-introduction.tex
+++ b/lecture-1-introduction.tex
@@ -118,7 +118,7 @@ and I will be able to clarify them.
 \begin{frame}{Poll on the Python background}
 \centering 
 \vskip 10pt
-{\Large \href{http://etc.ch/SA8F}{\textcolor{indigo(dye)}{\tt http://etc.ch/SA8F}}}\\ 
+{\Large \href{http://etc.ch/M2Rp}{\textcolor{indigo(dye)}{\tt http://etc.ch/M2Rp}}}\\ 
 or \\[10pt]
 \includegraphics[height=0.4\columnwidth]{figures/intro/poll-python-background.png}
 \end{frame}
@@ -515,8 +515,8 @@ the reactions are \alert{\textbf{in equilibrium}}.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.49\columnwidth]{figures/applications/corrosion.jpg} \\[5pt]
-\includegraphics[width=0.49\columnwidth]{figures/applications/fluid-catalytic-cracker}
+\includegraphics[width=0.45\columnwidth]{figures/applications/corrosion.jpg} \\[5pt]
+\includegraphics[width=0.45\columnwidth]{figures/applications/fluid-catalytic-cracker}
 %\caption*{Hemoglobin structure.}
 \end{figure}
 
