Add Reaktoro v2 link

--- a/lecture-1-introduction.tex
+++ b/lecture-1-introduction.tex
@@ -107,7 +107,7 @@ and I will be able to clarify them.
 \end{figure}
 }
 \vskip 10pt
-{\bf Note}: See Jupyter notebook tutorial \href{https://github.com/mtsveta/reaktoro-jupyter/blob/geofluids-examples/tutorial/eq.co2-solubility-in-nacl-brine.ipynb}{\textcolor{indigo(dye)}{\it CO$_2$ solubility in NaCl-brine}}.
+{\bf Note}: See Reaktoro v1 Jupyter notebook tutorial \href{https://github.com/mtsveta/reaktoro-jupyter/blob/geofluids-examples/tutorial/eq.co2-solubility-in-nacl-brine.ipynb}{\textcolor{indigo(dye)}{\it CO$_2$ solubility in NaCl-brine}} and \href{https://reaktoro.org/applications/solubility/solubility-co2-on-salinity-and-temperature.html}{\textcolor{indigo(dye)}{\it Reaktoro v2.0 example}} with the \href{https://github.com/mtsveta/reaktoro-v2-workshop/blob/main/tutorials/applications/salting-out-effect-co2.ipynb}{\textcolor{indigo(dye)}{\it Jupyter notebook}.
 
 \end{frame}
 
