--- a/slides.tex
+++ b/slides.tex
@@ -259,12 +259,16 @@ NO F 61}
 %\input{lecture-5-chemical-kinetics}
 %\input{lecture-6-reactive-transport}
 
-\begin{frame}[allowframebreaks]{References}
 
+\begin{frame}[allowframebreaks]{References}
+%
 \renewcommand\bibname{}
 
 \bibliographystyle{apalike2}
 \bibliography{library}
+
+\quad $\bullet$ Interactive MyBinder Reaktoro v2: \href{https://mybinder.org/v2/gh/mtsveta/reaktoro-v2-workshop/main?labpath=overview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
+\quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v2:  \href{https://github.com/mtsveta/reaktoro-v2-workshop.git}{\textcolor{indigo(dye)}{\it link}} \\
 
 \end{frame}
 
