Polls and links to the jupyter notebook examples are fixed in Lecture 2

--- a/lecture-1-introduction.tex
+++ b/lecture-1-introduction.tex
@@ -120,7 +120,7 @@ and I will be able to clarify them.
 \vskip 10pt
 {\Large \href{http://etc.ch/M2Rp}{\textcolor{indigo(dye)}{\tt http://etc.ch/M2Rp}}}\\ 
 or \\[10pt]
-\includegraphics[height=0.4\columnwidth]{figures/intro/poll-python-background.png}
+\includegraphics[height=0.4\columnwidth]{figures/intro/poll.png}
 \end{frame}
 
 % --------------------------------------------------------------------------------------------------------------------%
@@ -132,7 +132,7 @@ or \\[10pt]
 \vskip 10pt
 {\Large \href{http://etc.ch/M2Rp}{\textcolor{indigo(dye)}{\tt http://etc.ch/M2Rp}}}\\ 
 or \\[10pt]
-\includegraphics[height=0.4\columnwidth]{figures/intro/poll-python-background.png}
+\includegraphics[height=0.4\columnwidth]{figures/intro/poll.png}
 \end{frame}
 
 % --------------------------------------------------------------------------------------------------------------------%
@@ -579,7 +579,7 @@ Consider the reaction
 of A, B, C and D (in mol/s)? \\
 \begin{center}{ \href{http://etc.ch/M2Rp}{\textcolor{indigo(dye)}{\tt http://etc.ch/M2Rp}}} \quad
 or \quad
-\includegraphics[height=0.25\columnwidth]{figures/intro/poll-python-background.png}
+\includegraphics[height=0.25\columnwidth]{figures/intro/poll.png}
 \end{center}
 \hiddenpause
 \textbf{Answer:} \\
