--- a/lecture-2-chemical-equilibrium.tex
+++ b/lecture-2-chemical-equilibrium.tex
@@ -65,11 +65,11 @@ HCO$_{3}^{-}$ etc.).
 the amounts of H, O, C, Z?
 
 \begin{center}
-\href{http://etc.ch/oyhr}{\textcolor{indigo(dye)}{\tt http://etc.ch/oyhr}} 
+\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
 \quad
 or 
 \quad
-\includegraphics[height=0.21\columnwidth]{figures/chemical-equilibrium/poll-mass-balance.png}
+\includegraphics[height=0.21\columnwidth]{figures/chemical-equilibrium/poll.png}
 \end{center}
 
 \hiddenpause
@@ -222,7 +222,7 @@ $i$ into the element $j$}}.
 % --------------------------------------------------------------------------------------------------------------------%
 % Constructing the formula matrix for the H2O–CO2 system
 % --------------------------------------------------------------------------------------------------------------------%
-%
+
 \begin{frame}{Constructing the formula matrix for the H$_{\boldsymbol{2}}$O-CO$_{\boldsymbol{2}}$ system\; ii}
 
 \textbf{Answer:} {\small
@@ -245,8 +245,8 @@ is true for the rows of $A$:
 \vskip 5pt
 \visible<2->{
 \centering
-\href{http://etc.ch/UbWW}{\textcolor{indigo(dye)}{\tt  http://etc.ch/oyhr}} \quad or \quad 
-\includegraphics[height=0.35\columnwidth]{figures/chemical-equilibrium/poll-linear-independence.png}}
+\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt  http://etc.ch/bv5y}} \quad or \quad 
+\includegraphics[height=0.35\columnwidth]{figures/chemical-equilibrium/poll.png}}
 
 \rcol
 
@@ -266,7 +266,7 @@ is true for the rows of $A$:
 }
 \ecol
 \end{frame}
-%
+
 % --------------------------------------------------------------------------------------------------------------------%
 % Calculating the amounts of elements from species amounts
 % --------------------------------------------------------------------------------------------------------------------%
@@ -451,7 +451,7 @@ to transform to B.
 \mathsf{CO_{2}\text{(g)}\rightleftharpoons CO_{2}\text{(aq)}}
 \]
 \vskip -50pt
-\includegraphics[height=0.17\columnwidth,right]{figures/chemical-equilibrium/poll-linear-independence.png}
+\includegraphics[height=0.17\columnwidth,right]{figures/chemical-equilibrium/poll.png}
 \pause
 \vskip -40pt
 \item We have the following three cases: 
@@ -547,7 +547,7 @@ three cases:{
 \item In each case, is CO$_{2}$(g) tending to dissolve or exsolve? 
 \end{itemize}
 \vskip -45pt
-\includegraphics[height=0.16\columnwidth,right]{figures/chemical-equilibrium/poll-linear-independence.png}
+\includegraphics[height=0.16\columnwidth,right]{figures/chemical-equilibrium/poll.png}
 \end{frame}
 %
 % --------------------------------------------------------------------------------------------------------------------%
@@ -916,7 +916,7 @@ Calculate $\ln K$ and $\log K$ for the reaction:
 \end{itemize}
 \centering
 \vskip -73pt
-\includegraphics[height=0.22\columnwidth, right]{figures/chemical-equilibrium/poll-linear-independence.png}
+\includegraphics[height=0.22\columnwidth, right]{figures/chemical-equilibrium/poll.png}
 
 
 \end{frame}
@@ -1210,8 +1210,8 @@ which is relatively small in comparison to other minerals.
 %\pause
 \item Solubility of $\mathsf{CaCO_3}$ \textbf{increases} as the pressure of the water \textbf{increases}.
 \pause
-\item Demonstration of these properties can be found in Jupyter notebook tutorial 
-\href{}{\textcolor{indigo(dye)}{\it Calcite solubility in water and CO$_2$-saturated rainwater}}.
+\item Demonstration of these properties can be found in website example 
+\href{https://reaktoro.org/applications/solubility/solubility-calcite-on-acidity-and-temperature.html}{\textcolor{indigo(dye)}{\it Calcite solubility in water and CO$_2$-saturated rainwater}} with \href{https://github.com/mtsveta/reaktoro-v2-workshop/blob/main/tutorials/solubility/solubility-calcite-in-water-rainwater.ipynb}{\textcolor{indigo(dye)}{\it Jupyter notebook tutorial}}.
 %
 \pause
 \item Calcite has a \textbf{very low solubility} in \textbf{pure water} (we saw an analytic estimation is 10 \mbox{mg/L}).
@@ -1222,7 +1222,7 @@ which is relatively small in comparison to other minerals.
 %driving force behind the {\bf erosion of limestone rocks}.
 %
 \pause
-\item Solubility of calcite \textbf{decreases} in the CO2-saturated water  as the temperature \textbf{increases} ({\bf unusual}!).
+\item Solubility of calcite \textbf{decreases} in the CO$_2$-saturated water  as the temperature \textbf{increases} ({\bf unusual}!).
 \end{itemize}
 
 \begin{figure}\centering
@@ -1291,11 +1291,11 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 		%
 		\item  \alert{\bf Quiz}: What is solubility of AgCl(s) in 1 liter of water, where $K_{sp} = 1.8 \cdot 10^{-10}$?
 		\begin{center}
-			\href{http://etc.ch/oyhr}{\textcolor{indigo(dye)}{\tt http://etc.ch/oyhr}} 
+			\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
 			\quad
 			or 
 			\quad
-			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll-mass-balance.png}
+			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
 		\end{center}
 		\hiddenpause
 		\item {\bf Answer}: 1 liter of water can dissolve $1.34 \cdot 10^{-5}$ mol/L of AgCl(s) at room temperature. \\
@@ -1364,11 +1364,11 @@ and
 		${\sf [SO_4^{2-}]}=1.8 \cdot$ 1e-4 molal?
 		%
 		\begin{center}
-			\href{http://etc.ch/oyhr}{\textcolor{indigo(dye)}{\tt http://etc.ch/oyhr}} 
+			\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
 			\quad
 			or 
 			\quad
-			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll-mass-balance.png}
+			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
 		\end{center}
 		\hiddenpause
 		\item {\bf Answer}: Water will be supersaturated with ${\sf BaSO_4(s)}$.
@@ -1391,7 +1391,7 @@ and
 		\href{https://github.com/mtsveta/reaktoro-jupyter/blob/geofluids-examples/tutorial/eq.anhydrite-solubility.ipynb}{\textcolor{indigo(dye)}{\it Gypsum/anhydrite solubility in water}}.
 		%
 		\item Investigation on how saturated the Evian water with carbonates can be found in 
-		Jupyter notebook tutorial \href{https://github.com/mtsveta/reaktoro-jupyter/blob/geofluids-examples/tutorial/eq.evian-water-analysis.ipynb}{\textcolor{indigo(dye)}{\it Analysis of the Evian water}}.
+		Jupyter notebook tutorial \href{https://reaktoro.org/applications/miscellaneous/evian-water-analysis.html}{\textcolor{indigo(dye)}{\it Analysis of the Evian water}}.
 		%
 		\item Barite precipitation in the water flooding reactive transport example:
 		%
@@ -1403,13 +1403,13 @@ and
 	\rcol
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.8\columnwidth]{figures/chemical-equilibrium/anhydrite-solubility.png}
+		\includegraphics[width=0.75\columnwidth]{figures/chemical-equilibrium/anhydrite-solubility.png}
 		%\caption{}
 	\end{figure}
 	\vskip -10pt
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.75\columnwidth]{figures/chemical-equilibrium/barite-scaling.png}
+		\includegraphics[width=0.7\columnwidth]{figures/chemical-equilibrium/barite-scaling.png}
 		%\caption{}
 	\end{figure}
 	\ecol
@@ -1579,7 +1579,7 @@ where
 			\quad
 			or 
 			\quad
-			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll-mass-balance.png}
+			\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
 		\end{center}
 		\hiddenpause
 		\item {\bf Answer}: 1.09374 g. 
@@ -1635,7 +1635,7 @@ where
 \mathsf{CO_2(g) + H_2O(l) = H^+ + HCO_3^-.}
 \]
 % 
-See tutorial \href{}{\textcolor{indigo(dye)}{\it Dependence of the pH on the $\mathsf{CO_2(g)}$ amount in seawater}}.
+See tutorial \href{https://reaktoro.org/applications/miscellaneous/ph-dependence-on-co2-addition-in-seawater.html}{\textcolor{indigo(dye)}{\it Dependence of the pH on the $\mathsf{CO_2(g)}$ amount in seawater}}.
 %
 \pause
 \vskip 10pt
@@ -1667,7 +1667,7 @@ adding ammonia \textbf{removes} $\mathsf{H^+}$ from water and increases it to pr
 %\mathsf{HCl(aq) + H_2O(l) = 2\, H^+ + HO^- + Cl^-.}
 %\]
 % 
-See tutorial \href{}{\textcolor{indigo(dye)}{\it Dependence of the pH on added contaminant in water}}.
+See tutorial \href{https://reaktoro.org/applications/miscellaneous/ph-dependence-on-contaminants-in-water.html}{\textcolor{indigo(dye)}{\it Dependence of the pH on added contaminant in water}}.
 
 \end{itemize}
 %
