--- a/slides.tex
+++ b/slides.tex
@@ -251,8 +251,8 @@ NO F 61}
 	\tableofcontents%[hidea b llsubsections]
 \end{frame}
 %
-\input{lecture-1-introduction}
-%\input{lecture-2-chemical-equilibrium}
+%\input{lecture-1-introduction}
+\input{lecture-2-chemical-equilibrium}
 %\input{lecture-3-thermodynamic-model}
 %\input{lecture-4-numerical-method-equilibrium}
 %project descriptions
