--- a/slides.tex
+++ b/slides.tex
@@ -269,7 +269,9 @@ NO F 61}
 
 \quad $\bullet$ Interactive MyBinder Reaktoro v2: \href{https://mybinder.org/v2/gh/mtsveta/reaktoro-v2-workshop/main?labpath=overview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
 \quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v2:  \href{https://github.com/mtsveta/reaktoro-v2-workshop.git}{\textcolor{indigo(dye)}{\it link}} \\
-
+%
+% \quad $\bullet$ Interactive MyBinder Reaktoro v1: \href{https://mybinder.org/v2/gh/reaktoro/reaktoro-jupyter/master?filepath=tutorial%2Foverview.ipynb}{\textcolor{indigo(dye)}{\it link}} \\
+\quad $\bullet$ Hands-on Jupyter notebooks Reaktoro v1:  \href{https://github.com/mtsveta/reaktoro-jupyter.git}{\textcolor{indigo(dye)}{\it link}} \\
 \end{frame}
 
 
